@@ -36,6 +36,12 @@ class LabelsTest {
             Labels.Mutable.of("foo", "bar"),
             Labels.Mutable.of("foo", "bar"));
         assertEqualsHashCode(
+            Labels.Mutable.of().serviceName("foo"),
+            Labels.Mutable.of().serviceName("foo"));
+        assertEqualsHashCode(
+            Labels.Mutable.of().transactionName("foo"),
+            Labels.Mutable.of().transactionName(new StringBuilder("foo")));
+        assertEqualsHashCode(
             Labels.Mutable.of().transactionName("foo"),
             Labels.Mutable.of().transactionName("foo"));
         assertEqualsHashCode(
@@ -94,6 +100,7 @@ class LabelsTest {
         assertThat(labels.getSpanSubType()).isNull();
         assertThat(labels.getTransactionName()).isNull();
         assertThat(labels.getTransactionType()).isNull();
+        assertThat(labels.getServiceName()).isNull();
 
         assertEqualsHashCode(labels, Labels.EMPTY);
     }
