@@ -41,6 +41,7 @@ by the agent may be different. This was done in order to improve the integration
 * Improved capturing of logged exceptions when using Log4j2 - {pull}2139[#2139]
 * Update to async-profiler 1.8.7 and set configured `safemode` at load time though a new system property - {pull}2165[#2165]
 * Added support to capture `context.message.routing-key` in rabbitmq, spring amqp instrumentations - {pull}1767[#1767]
+* Breakdown metrics are now tracked per service (when using APM Server 8.0) - {pull}2208[#2208]
 
 [float]
 ===== Performance improvements
